VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc19Up.err
[8MB/455MB][  1%][>                                                 ][8MB/s]  [16MB/455MB][  3%][=>                                                ][8MB/s]  [64MB/455MB][ 14%][=======>                                          ][21.33MB/s]  [112MB/455MB][ 24%][============>                                     ][28MB/s]  [152MB/455MB][ 33%][================>                                 ][30.4MB/s]  [200MB/455MB][ 43%][=====================>                            ][33.33MB/s]  [256MB/455MB][ 56%][============================>                     ][36.57MB/s]  [320MB/455MB][ 70%][===================================>              ][40MB/s]  [368MB/455MB][ 80%][========================================>         ][40.89MB/s]  [424MB/455MB][ 93%][==============================================>   ][42.4MB/s]  [455MB/455MB][100%][==================================================][45.5MB/s]  [455MB/455MB][100%][==================================================][45.5MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_109637/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_109637/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
